stl-test/Tests/array_view/array_view/Negative/test6.cpp
//#error
#include <array_view>
int main()
{
    const std::array_view<unsigned int, 2> v;
    std::array_view<int, 1> av(v);
}
